--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,35 @@
   color: #61dafb;
 }
 
+.title_row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.title_container {
+  margin: 1em;
+}
+
+.filter {
+  display: flex;
+  align-self: center;
+  margin: 1em;
+}
+
+.items_container {
+  background-color: white;
+  grid-row: 1;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
