more layout fixing

--- a/src/App.css
+++ b/src/App.css
@@ -50,11 +50,31 @@
   display: flex;
   flex-direction: row;
   
+  
 }
 
 .col {
   display: flex;
   flex-direction: column;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 1em;
+}
+
+
+.chip {
+  margin: 0.15em;
+}
+
+.card {
+  margin: 1em;
+  width: 30%;
+  height: 25em;
+  position: relative;
 }
 
 
