--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,6 @@
   background-color: gray;
   display: flex;
   flex-direction: row;
-  
-  
 }
 
 .col {
@@ -62,12 +60,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 1em;
+  
 }
 
 
 .chip {
   margin: 0.15em;
+}
+
+.removeButton {
+  margin:1em;
 }
 
 .card {
