--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,13 @@
   align-items: center;
 }
 
+.filter_row {
+  display: flex;
+
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .title_container {
   margin: 1em;
 }
@@ -46,7 +53,7 @@
 }
 
 .items_container {
-  background-color: gray;
+  background-color: powderblue;
   display: flex;
   flex-direction: row;
 }
@@ -54,13 +61,31 @@
 .col {
   display: flex;
   flex-direction: column;
+  background-color: powderblue;
+  padding: 1em;
+  
 }
+
+
+
 
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   
+}
+
+.cart {
+  border: 1px;
+  background-color: white;
+  width: 260px;
+  padding: 1em;
+  
+}
+
+.margin {
+ margin: 1em;
 }
 
 
@@ -74,8 +99,8 @@
 
 .card {
   margin: 1em;
-  width: 30%;
-  height: 25em;
+  width: 20%;
+  height: 27em;
   position: relative;
 }
 
