--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   
+
+  
 }
 
 .cart {
@@ -99,7 +101,7 @@
 
 .card {
   margin: 1em;
-  width: 20%;
+  width: 250px;
   height: 27em;
   position: relative;
 }
